# teacc

./: .gitignore  README.md  Teacc.sln
Libraries/CPP/: CMakeLists.txt
Libraries/CPP/Diagnostics/: CMakeLists.txt  Diagnostic.cpp  Diagnostic.h  UtilTests.cpp  UtilTests.h
Libraries/CPP/Diagnostics/include/teacc/Diagnostics/: Diagnostic.h  Lib.h
Libraries/CPP/Diagnostics/src/: Diagnostic.cpp
Libraries/CPP/Lexer/: CMakeLists.txt
Libraries/CPP/Lexer/Tests/: CMakeLists.txt  LexerTests.cpp  LexerTests.h
Libraries/CPP/Lexer/include/teacc/Lexer/: Lexer.h  LexicalScanners.h  Lib.h  TokenData.h  Types.h
Libraries/CPP/Lexer/src/: Lexer.cpp  LexicalScanners.cpp  TokenData.cpp  Types.cpp
Libraries/CPP/SQLite/: CMakeLists.txt
Libraries/CPP/SQLite/include/teacc/DBE/: Dbe.h  Lib.h
Libraries/CPP/SQLite/src/: Dbe.cpp
Libraries/CPP/Util/: CMakeLists.txt
Libraries/CPP/Util/Tests/: CMakeLists.txt  Test.cpp  Test.h  UtilTests.cpp  UtilTests.h
Libraries/CPP/Util/include/teacc/Util/: AppBook.h  AppLog.h  CArguments.h  Lib.h  PtrList.h  Rem.h  String.h
Libraries/CPP/Util/src/: AppBook.cpp  AppLog.cpp  CArguments.cpp  PtrList.cpp  Rem.cpp  String.cpp
Teacc/: Teacc.vcxproj
